Fix dropdown going offscreen

--- a/wheres-waldo-app/src/App.css
+++ b/wheres-waldo-app/src/App.css
@@ -136,6 +136,7 @@
     background-color: white;
     border: 2px solid rgba(0, 0, 0, 0.5);
     border-radius: 5px;
+    width: 200px;
 }
 
 .dropdown-item,
